--- a/org_donnees_biblio.bib
+++ b/org_donnees_biblio.bib
@@ -6,12 +6,8 @@
 	journal = {Unlocking Research},
 	author = {Cadwallader, Lauren},
 	month = oct,
-	year = {2016},
-
-
-}
-
-@misc{higman_template_2017,
+	year = {2016},	
+}@misc{higman_template_2017,
 	title = {Template {Research} {Data} {Management} {Workshop} {For} {Stem} {Researchers}},
 	url = {https://zenodo.org/record/239090},
 	abstract = {These materials are designed as a template for an introductory Research Data Management workshop for STEM postgraduate students and Early Career Researchers. The workshop is interactive and is designed to be run for 2-3 hours depending on which sections of the workshop are delivered. As it is a template workshop there is a lot of material to cover all disciplines, it is unlikely that all sections would be of interest to any one group of researchers. The sections are:{\textless}br{\textgreater}
@@ -21,19 +17,23 @@ How to organise your data well{\textless}br{\textgreater}
 Data Tools{\textless}br{\textgreater}
 Personal and sensitive data{\textless}br{\textgreater}
 Data sharing{\textless}br{\textgreater}
-Data Management Plans
-
-The workshop works best when adapted for a particular discipline and with a maximum of 30 participants. This workshop was developed for the Data Champions programme at the University of Cambridge and is an adaptation of workshops which are run on a regular basis for PhD students and Postdoctoral researchers. If you would like any more information please email info@data.cam.ac.uk and we would be happy to answer any questions that you have.},
+Data Management PlansThe workshop works best when adapted for a particular discipline and with a maximum of 30 participants. This workshop was developed for the Data Champions programme at the University of Cambridge and is an adaptation of workshops which are run on a regular basis for PhD students and Postdoctoral researchers. If you would like any more information please email info@data.cam.ac.uk and we would be happy to answer any questions that you have.},
 	urldate = {2017-09-05},
 	author = {Higman, Rosie and Teperek, Marta},
 	month = jan,
 	year = {2017},
-	doi = {10.5281/zenodo.239090},
+	doi = {10.5281/zenodo.239090},	
+}@misc{stm_publishing_news_wiley_2017,
+	title = {Wiley announces new {Data} {Sharing} and {Citation} policies to improve transparency in research},
+	url = {http://www.stm-publishing.com/wiley-announces-new-data-sharing-and-citation-policies-to-improve-transparency-in-research/},
+	abstract = {Click here to view the image...},
+	urldate = {2017-09-15},
+	journal = {STM Publishing News},
+	author = {{STM Publishing News}},
+	month = sep,
+	year = {2017},
 
-
-}
-
-@misc{brewer_you_2017,
+}@misc{brewer_you_2017,
 	title = {“{Do} {You} {Expect} {Me} to {Just} {Give} {Away} {My} {Data}?”},
 	shorttitle = {“{Do} {You} {Expect} {Me} to {Just} {Give} {Away} {My} {Data}?},
 	url = {https://eos.org/editors-vox/do-you-expect-me-to-just-give-away-my-data},
@@ -44,18 +44,12 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	month = sep,
 	year = {2017},
 
-}
-
-@misc{morgan_research_2017,
+}@misc{morgan_research_2017,
 	title = {Research {Data} {Management}},
 	url = {http://libguides.library.cqu.edu.au/researchdatamanagement},
 	author = {Morgan, Helen},
-	year = {2017},
-
-
-}
-
-@article{zeeland_development_2017,
+	year = {2017},	
+}@article{zeeland_development_2017,
 	title = {The development of a research data policy at {Wageningen} {University} \& {Research}: best practices as a framework},
 	volume = {27},
 	copyright = {Authors who publish with this journal agree to the following terms:    Authors retain copyright and grant the journal right of first publication with the work simultaneously licensed under a  Creative Commons Attribution License  that allows others to share the work with an acknowledgement of the work's authorship and initial publication in this journal.  Authors are able to enter into separate, additional contractual arrangements for the non-exclusive distribution of the journal's published version of the work (e.g., post it to an institutional repository or publish it in a book), with an acknowledgement of its initial publication in this journal.  Authors are permitted and encouraged to post their work online (e.g., in institutional repositories or on their website) prior to and during the submission process, as it can lead to productive exchanges, as well as earlier and greater citation of published work (See  The Effect of Open Access ).  All third-party images reproduced on this journal are shared under Educational Fair Use. For more information on  Educational Fair Use , please see  this useful checklist prepared by Columbia University Libraries .   All copyright  of third-party content posted here for research purposes belongs to its original owners.  Unless otherwise stated all references to characters and comic art presented on this journal are ©, ® or ™ of their respective owners. No challenge to any owner’s rights is intended or should be inferred.},
@@ -70,22 +64,16 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {LIBER Quarterly},
 	author = {Zeeland, Hilde van and Ringersma, Jacquelijn},
 	month = sep,
-	year = {2017},
-
-	pages = {153--170},
-
-}
-
-@misc{cornell_research_data_management_service_group_preparing_nodate,
+	year = {2017},	pages = {153--170},
+	
+}@misc{cornell_research_data_management_service_group_preparing_nodate,
 	title = {Preparing tabular data for description and archiving},
 	url = {https://data.research.cornell.edu/content/tabular-data},
 	urldate = {2017-10-12},
 	journal = {Research Data Management Service Group},
 	author = {{Cornell Research Data Management Service Group}},
 
-}
-
-@article{baker_preserving_2014,
+}@article{baker_preserving_2014,
 	title = {Preserving {Your} {Research} {Data}},
 	url = {https://programminghistorian.org/lessons/preserving-your-research-data},
 	urldate = {2017-10-17},
@@ -94,9 +82,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	month = apr,
 	year = {2014},
 
-}
-
-@article{markowetz_five_2015,
+}@article{markowetz_five_2015,
 	title = {Five selfish reasons to work reproducibly},
 	volume = {16},
 	issn = {1474-760X},
@@ -107,13 +93,9 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {Genome Biology},
 	author = {Markowetz, Florian},
 	month = dec,
-	year = {2015},
-
-	pages = {274},
-
-}
-
-@article{noble_quick_2009,
+	year = {2015},	pages = {274},
+	
+}@article{noble_quick_2009,
 	title = {A {Quick} {Guide} to {Organizing} {Computational} {Biology} {Projects}},
 	volume = {5},
 	issn = {1553-7358},
@@ -126,23 +108,15 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	author = {Noble, William Stafford},
 	editor = {Lewitter, Fran},
 	month = jul,
-	year = {2009},
-
-	pages = {e1000424},
-
-}
-
-@misc{cornell_research_data_management_service_group_guide_nodate,
+	year = {2009},	pages = {e1000424},
+	
+}@misc{cornell_research_data_management_service_group_guide_nodate,
 	title = {Guide to writing "readme" style metadata},
 	url = {https://data.research.cornell.edu/content/readme},
 	urldate = {2017-10-18},
 	journal = {Research Data Management Service Group},
-	author = {{Cornell Research Data Management Service Group}},
-
-
-}
-
-@misc{university_of_leicester_organise_nodate,
+	author = {{Cornell Research Data Management Service Group}},	
+}@misc{university_of_leicester_organise_nodate,
 	title = {Organise data},
 	url = {https://www2.le.ac.uk/services/research-data/organise-data},
 	abstract = {How do you find the research data you and your collaborators have created, gathered and manipulated? As time passes and data volumes and file numbers increase how do you prevent the issue becoming unmanageable? It is very easy for research (and any other) data to become disorganised, and data organisation isn’t going to be top of your list of priorities. However data organisation is time well spent. Use file and folder structures, and name, describe and document your data. This will save time, reduce errors and enable you and others to find and understand what you have done. Practical methods and processes, used consistently are required.},
@@ -151,43 +125,40 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {University of Leicester},
 	author = {{University of Leicester}},
 
-}
+}@misc{schonbrodt_changing_2016,
+	title = {Changing hiring practices towards research transparency: {The} first open science statement in a professorship advertisement},
+	shorttitle = {Changing hiring practices towards research transparency},
+	url = {http://www.nicebread.de/open-science-hiring-practices/},
+	abstract = {Engaging in open science practices increases knowledge as a common good, and ensures the reproducibility, verifiability and credibility of research. But some have the fear that on an individual strategic level (in particular from an early career perspective) engaging in research transparency could r…},
+	urldate = {2017-10-20},
+	journal = {Nicebread},
+	author = {Schönbrodt, Felix},
+	month = jan,
+	year = {2016},
 
-@techreport{strasser_research_2015,
+}@techreport{strasser_research_2015,
 	title = {Research {Data} {Management}},
 	url = {http://www.niso.org/apps/group_public/download.php/15375/PrimerRDM-2015-0727.pdf},
 	urldate = {2017-10-26},
 	institution = {National Information Standards Organization},
 	author = {Strasser, Carly},
-	year = {2015},
-
-
-}
-
-@misc{cham_notfinal.doc_2012,
+	year = {2015},	
+}@misc{cham_notfinal.doc_2012,
 	title = {{notFinal}.doc},
 	shorttitle = {{PHD} {Comics}},
 	url = {http://phdcomics.com/comics/archive.php?comicid=1531},
 	abstract = {PHD Comics:},
 	urldate = {2017-11-02},
 	author = {Cham, Jorge},
-	year = {2012},
-
-
-}
-
-@misc{cham_story_nodate,
+	year = {2012},	
+}@misc{cham_story_nodate,
 	title = {A story in file names},
 	shorttitle = {{PHD} {Comics}},
 	url = {http://phdcomics.com/comics/archive.php?comicid=1323},
 	abstract = {PHD Comics},
 	urldate = {2017-11-02},
-	author = {Cham, Jorge},
-
-
-}
-
-@techreport{arnould_guide_2017,
+	author = {Cham, Jorge},	
+}@techreport{arnould_guide_2017,
 	title = {Guide de bonnes pratiques : gestion et valorisation des données de recherche},
 	shorttitle = {Guide de bonnes pratiques},
 	abstract = {L’objectif de ce guide est de rappeler les bonnes pratiques pour la gestion de vos données tout au long de leur cycle de vie  de leur production à leur diffusion et valorisation. La gestion des échantillons peut s’avérer aussi nécessaire pour une réutilisation ou un partage.},
@@ -197,12 +168,8 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	author = {Arnould, Pierre-Yves and Jacquemot-Perbal, Marie-Christine},
 	month = jun,
 	year = {2017},
-	doi = {10.24396/ORDAR-1},
-
-
-}
-
-@misc{uk_data_service_version_nodate,
+	doi = {10.24396/ORDAR-1},	
+}@misc{uk_data_service_version_nodate,
 	title = {Version control and authenticity},
 	url = {https://www.ukdataservice.ac.uk/manage-data/format/versioning},
 	abstract = {It is important to ensure that different copies or versions of files, files held in different formats or locations, and information that is cross-referenced between files are all subject to version control.},
@@ -210,9 +177,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {UK Data Service},
 	author = {{UK Data Service}},
 
-}
-
-@misc{oliver_my_2017,
+}@misc{oliver_my_2017,
 	title = {My {Favourite} {Tool}: {Git}/{GitHub}},
 	shorttitle = {My {Favourite} {Tool}},
 	url = {http://software-carpentry.org//blog/2017/10/oliver-fave.html},
@@ -223,9 +188,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	month = oct,
 	year = {2017},
 
-}
-
-@misc{middle_cleaning_2017,
+}@misc{middle_cleaning_2017,
 	title = {Cleaning and {Visualising} {Privy} {Council} {Appeals} {Data}},
 	url = {http://blogs.bl.uk/digital-scholarship/2017/12/cleaning-and-visualising-privy-council-appeals-data.html},
 	urldate = {2017-12-22},
@@ -234,21 +197,15 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	month = dec,
 	year = {2017},
 
-}
-
-@misc{magle_data_2016,
+}@misc{magle_data_2016,
 	title = {Data and {Donuts}: {Data} organization},
 	shorttitle = {Data and {Donuts}},
 	url = {https://www.slideshare.net/CTobinMagle/data-and-donuts-data-organization},
 	abstract = {How to organize your data using folders, file names and spreadsheets.},
 	urldate = {2018-01-04},
 	author = {Magle, C. Tobin},
-	year = {2016},
-
-
-}
-
-@misc{wallis_setting_2014,
+	year = {2016},	
+}@misc{wallis_setting_2014,
 	title = {Setting up a project directory},
 	url = {https://tomwallis.info/2014/01/16/setting-up-a-project-directory/},
 	abstract = {The first step in making a research project reproducible is to make sure that the files are associated with it are organised. Since scientific projects will change (sometimes a lot) as you work on …},
@@ -258,30 +215,22 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	month = jan,
 	year = {2014},
 
-}
-
-@misc{the_university_of_edinburgh_organising_nodate,
+}@misc{the_university_of_edinburgh_organising_nodate,
 	title = {Organising data},
 	url = {http://mantra.edina.ac.uk/organisingdata/},
 	urldate = {2018-01-05},
 	journal = {MANTRA Research Data Management Training},
 	author = {{The University of Edinburgh}},
 
-}
-
-@misc{malinowski_data_2017,
+}@misc{malinowski_data_2017,
 	address = {MIT Libraries},
 	title = {Data {Management}: {File} {Organization}},
 	url = {https://libraries.mit.edu/data-management/files/2014/05/FileOrgSlides_20170118sm.pdf},
 	urldate = {2018-01-05},
 	author = {Malinowski, Christine},
 	month = jan,
-	year = {2017},
-
-
-}
-
-@misc{smith_tagging_nodate,
+	year = {2017},	
+}@misc{smith_tagging_nodate,
 	title = {Tagging and {Finding} {Your} {Files}},
 	copyright = {Copyright MIT Libraries 2018},
 	shorttitle = {{LibGuides}},
@@ -292,75 +241,51 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {MIT Libraries},
 	author = {Smith, Kari and Malinowski, Christine},
 
-}
-
-@misc{iap_research_2016,
+}@misc{iap_research_2016,
 	address = {MIT Libraries},
 	title = {Research {Data} {Management} 101: {The} {Lifecycle} of a {Dataset}},
 	url = {https://libraries.mit.edu/data-management/files/2014/05/rdm101_IAP2016_20160112-1.pdf},
 	urldate = {2018-01-05},
 	author = {{IAP}},
-	year = {2016},
-
-
-}
-
-@misc{the_university_of_edinburgh_file_nodate,
+	year = {2016},	
+}@misc{the_university_of_edinburgh_file_nodate,
 	title = {File formats and transformation},
 	url = {http://mantra.edina.ac.uk/fileformatandtransformation/},
 	urldate = {2018-01-05},
 	journal = {MANTRA Research Data Management Training},
 	author = {{The University of Edinburgh}},
 
-}
-
-@misc{the_university_of_edinburgh_documentation_nodate,
+}@misc{the_university_of_edinburgh_documentation_nodate,
 	title = {Documentation, metadata, citation},
 	url = {http://mantra.edina.ac.uk/documentation_metadata_citation/},
 	urldate = {2018-01-05},
 	journal = {MANTRA Research Data Management Training},
-	author = {{The University of Edinburgh}},
-
-
-}
-
-@misc{the_university_of_edinburgh_-it-yourself_nodate,
+	author = {{The University of Edinburgh}},	
+}@misc{the_university_of_edinburgh_-it-yourself_nodate,
 	title = {Do-{It}-{Yourself} {Research} {Data} {Management} {Training} {Kit} for {Librarians}},
 	url = {http://mantra.edina.ac.uk/libtraining.html},
 	urldate = {2018-01-05},
 	journal = {MANTRA Research Data Management Training},
-	author = {{The University of Edinburgh}},
-
-
-}
-
-@misc{the_university_of_edinburgh_storage_nodate,
+	author = {{The University of Edinburgh}},	
+}@misc{the_university_of_edinburgh_storage_nodate,
 	title = {Storage and security},
 	url = {http://mantra.edina.ac.uk/storageandsecurity/},
 	urldate = {2018-01-05},
 	journal = {MANTRA Research Data Management Training},
 	author = {{The University of Edinburgh}},
 
-}
-
-@misc{vermeulen_data_nodate,
+}@misc{vermeulen_data_nodate,
 	title = {Data {Management} {Plan}},
 	url = {https://www.wur.nl/upload_mm/d/4/9/fec82c96-d901-49c2-8205-c40a2e819ee7_Data_Management_Plan_Lucie_Vermeulen.pdf},
-	author = {Vermeulen, Lucie C.},
-
-
-}
-
-@misc{research_data_netherlands_storing_nodate,
+	author = {Vermeulen, Lucie C.},	
+}@misc{research_data_netherlands_storing_nodate,
 	title = {Storing data},
 	url = {http://datasupport.researchdata.nl/en/start-the-course/iii-the-research-phase/storing-data/},
 	urldate = {2018-01-08},
 	journal = {Essentials 4 Data Support},
 	author = {{Research Data Netherlands}},
 
-}
-
-@misc{uk_data_service_data_nodate,
+}@misc{uk_data_service_data_nodate,
 	title = {Data backup},
 	url = {https://www.ukdataservice.ac.uk/manage-data/store/backup},
 	abstract = {Making back-ups of files is an essential element of data management. Regular back-ups protect against accidental or malicious data loss and can be used to restore originals if there is loss of data.},
@@ -368,9 +293,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {UK Data Service},
 	author = {{UK Data Service}},
 
-}
-
-@misc{university_of_leicester_naming_nodate,
+}@misc{university_of_leicester_naming_nodate,
 	title = {Naming files and folders},
 	url = {https://www2.le.ac.uk/services/research-data/organise-data/naming-files},
 	abstract = {Naming conventions are rules which enable the titling of electronic and physical folders, documents and records in a consistent and logical way. This ensures that the correct records can be located, identified and retrieved from a filing system in a timely fashion, and that they are stored in an appropriate secure location. Ideally, the best time to think how to name and structure the documents and directories you create is at the start of a project.},
@@ -379,9 +302,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {University of Leicester},
 	author = {{University of Leicester}},
 
-}
-
-@misc{wageningen_university_&_research_organising_2015,
+}@misc{wageningen_university_&_research_organising_2015,
 	title = {Organising files and folders},
 	url = {https://www.wur.nl/en/Expertise-Services/Data-Management-Support-Hub/Browse-by-Subject/Organising-files-and-folders.htm},
 	abstract = {Designing a logical folder structure and consistently applying descriptive file names over time makes your research process more efficient. Some best practices are provided below.},
@@ -390,22 +311,25 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {Wageningen University \& Research},
 	author = {{Wageningen University \& Research}},
 	month = feb,
-	year = {2015},
-
-}
-
-@misc{4tu_centre_for_research_data_guidelines_2017,
+	year = {2015},	
+}@misc{dunning_research_2017,
+	address = {Delft},
+	title = {Research {Data} {Policy} for {PhDs}},
+	url = {https://figshare.com/articles/Research_Data_Policy_for_PhDs_at_TU_Delft_pptx/5729010},
+	abstract = {Presentation given to TU Delft Graduate School on making sharing of PhD policies mandatory You can download this presentation from Figshare Notes on PhD Policies for Research Data in Netherlands an…},
+	language = {en},
+	urldate = {2018-01-09},
+	author = {Dunning, Alastair},
+	month = dec,
+	year = {2017},	
+}@misc{4tu_centre_for_research_data_guidelines_2017,
 	title = {Guidelines for creating a {README} file},
 	url = {http://researchdata.4tu.nl/fileadmin/editor_upload/pdf/README/Guidelines_for_creating_a_README_file.pdf},
 	urldate = {2018-01-09},
 	author = {{4TU Centre for Research Data}},
 	month = dec,
-	year = {2017},
-
-
-}
-
-@misc{della_vedova_12_2017,
+	year = {2017},	
+}@misc{della_vedova_12_2017,
 	title = {12 conseils pour organiser efficacement vos données dans un tableur},
 	url = {https://statistique-et-logiciel-r.com/12-recommandations-pour-organiser-efficacement-vos-donnees-dans-un-tableur/},
 	abstract = {Cliquez ici pour obtenir les 12 conseils que les débutants doivent connaitre pour organiser efficacement leurs données sous n'importe quel tableur},
@@ -416,20 +340,14 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	month = dec,
 	year = {2017},
 
-}
-
-@misc{division_of_technology_information_and_library_services_-_queensland_university_of_technology_tils_2015,
+}@misc{division_of_technology_information_and_library_services_-_queensland_university_of_technology_tils_2015,
 	title = {{TILS} {Document} {Naming} {Convention}},
 	url = {https://www.library.qut.edu.au/about/management/documents/QUTTILSDocNamingConvention.pdf},
 	urldate = {2018-01-14},
 	journal = {Queensland University of Technology},
 	author = {{Division of Technology, Information and Library Services - Queensland University of Technology}},
-	year = {2015},
-
-
-}
-
-@misc{the_gurdon_institute_electronic_2018,
+	year = {2015},	
+}@misc{the_gurdon_institute_electronic_2018,
 	title = {Electronic {Lab} {Notebooks} - for prospective users},
 	url = {https://www.gurdon.cam.ac.uk/institute-life/computing/elnguidance?mc_cid=7dce7efa97&mc_eid=[UNIQID]},
 	abstract = {Information for researchers who are interested in adopting an Electronic Lab Notebook system for documenting research and managing data.},
@@ -439,9 +357,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	author = {{The Gurdon Institute}},
 	year = {2018},
 
-}
-
-@article{broman_data_2017,
+}@article{broman_data_2017,
 	title = {Data organization in spreadsheets},
 	volume = {5},
 	url = {https://peerj.com/preprints/3183},
@@ -453,21 +369,15 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	author = {Broman, Karl W. and Woo, Kara H.},
 	month = aug,
 	year = {2017},
-	note = {DOI:},
-
-	pages = {e3183v1},
-
-}
-
-@misc{research_data_alliance_metadata_nodate,
+	note = {DOI:},	pages = {e3183v1},
+	
+}@misc{research_data_alliance_metadata_nodate,
 	title = {Metadata {Directory}},
 	url = {http://rd-alliance.github.io/metadata-directory/tools/},
 	urldate = {2018-01-22},
 	author = {{Research Data Alliance}},
 
-}
-
-@misc{bahlai_data_2017,
+}@misc{bahlai_data_2017,
 	title = {Data {Organization} in {Spreadsheets}: {Formatting} problems},
 	url = {http://www.datacarpentry.org/spreadsheet-ecology-lesson/02-common-mistakes/},
 	urldate = {2018-01-23},
@@ -476,19 +386,13 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	month = apr,
 	year = {2017},
 
-}
-
-@misc{vukovic_setting_nodate,
+}@misc{vukovic_setting_nodate,
 	title = {Setting up an {Organised} {Folder} {Structure} for {Research} {Projects}},
 	url = {http://nikola.me/folder_structure.html},
 	urldate = {2018-01-23},
 	journal = {Nikola},
-	author = {Vukovic, Nikola},
-
-
-}
-
-@misc{morin_france.code-civil:_2015,
+	author = {Vukovic, Nikola},	
+}@misc{morin_france.code-civil:_2015,
 	title = {france.code-civil: {Le} code civil français sous git},
 	shorttitle = {france.code-civil},
 	url = {https://github.com/steeve/france.code-civil},
@@ -497,9 +401,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	year = {2015},
 	note = {original-date: 2015-03-30T22:34:18Z},
 
-}
-
-@misc{dombrowski_it_2009,
+}@misc{dombrowski_it_2009,
 	title = {It happens every year},
 	copyright = {Attribution-ShareAlike License},
 	url = {https://www.flickr.com/photos/quinnanya/3239528185/},
@@ -507,22 +409,14 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	urldate = {2018-01-24},
 	author = {Dombrowski, Quinn},
 	month = jan,
-	year = {2009},
-
-
-}
-
-@misc{projet_doranum_les_2017,
+	year = {2009},	
+}@misc{projet_doranum_les_2017,
 	title = {Les formats ouverts et fermés [{Fiche} synthétique]},
 	url = {http://doranum.fr/wp-content/uploads/FS2_formats_ouverts_fermes_V1.pdf},
 	urldate = {2018-01-29},
 	author = {{Projet DoRANum}},
-	year = {2017},
-
-
-}
-
-@misc{uk_data_service_recommended_nodate,
+	year = {2017},	
+}@misc{uk_data_service_recommended_nodate,
 	title = {Recommended formats},
 	url = {https://www.ukdataservice.ac.uk/manage-data/format/recommended-formats},
 	abstract = {The UK Data Service works with different data formats for different purposes. There are optimal data formats that are used for long-term preservation of data.},
@@ -530,9 +424,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {UK Data Service},
 	author = {{UK Data Service}},
 
-}
-
-@misc{university_of_leicester_file_nodate,
+}@misc{university_of_leicester_file_nodate,
 	title = {File formats and software},
 	url = {https://www2.le.ac.uk/services/research-data/create-data/file-formats},
 	abstract = {Research data needs to be saved in a file format that ensures the accessibility and re-usability of your research data in both the short and longer term.},
@@ -541,9 +433,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {University of Leicester},
 	author = {{University of Leicester}},
 
-}
-
-@misc{projet_doranum_metadonnees_nodate,
+}@misc{projet_doranum_metadonnees_nodate,
 	title = {Métadonnées, standards et formats [{Fiche} synthétique]},
 	url = {http://doranum.fr/fiche-synthetique-metadonnees-standards-formats/},
 	language = {fr-FR},
@@ -551,19 +441,13 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {DoRANum},
 	author = {{Projet DoRANum}},
 
-}
-
-@misc{confederation_of_open_access_repositories_vocabulaires_2018,
+}@misc{confederation_of_open_access_repositories_vocabulaires_2018,
 	title = {Vocabulaires contrôlés},
 	url = {https://www.coar-repositories.org/files/coar-cv-infog-f_27052042-3.pdf},
 	urldate = {2018-01-30},
 	author = {{Confederation of Open Access Repositories}},
-	year = {2018},
-
-
-}
-
-@misc{flamerie_comment_2015,
+	year = {2018},	
+}@misc{flamerie_comment_2015,
 	type = {Billet},
 	title = {Comment organiser sa bibliothèque ?},
 	url = {https://zotero.hypotheses.org/756},
@@ -575,9 +459,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	month = dec,
 	year = {2015},
 
-}
-
-@misc{coates_project-mgmt:_2017,
+}@misc{coates_project-mgmt:_2017,
 	title = {project-mgmt: {Repository} created to provide resources for learning to use {GitHub} for project management},
 	shorttitle = {project-mgmt},
 	url = {https://github.com/coateshl/project-mgmt},
@@ -587,9 +469,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	year = {2017},
 	note = {original-date: 2017-04-21T16:16:09Z},
 
-}
-
-@misc{stanford_libraries_case_nodate,
+}@misc{stanford_libraries_case_nodate,
 	title = {Case study: {Basic} metadata},
 	shorttitle = {Case study},
 	url = {http://library.stanford.edu/research/data-management-services/case-studies/case-study-basic-metadata},
@@ -599,9 +479,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {Stanford Libraries},
 	author = {{Stanford Libraries}},
 
-}
-
-@misc{hodge_case_2015,
+}@misc{hodge_case_2015,
 	title = {Case study: {File} naming done well},
 	shorttitle = {Case study},
 	url = {http://library.stanford.edu/research/data-management-services/case-studies/case-study-file-naming-done-well},
@@ -610,12 +488,8 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	urldate = {2018-02-01},
 	journal = {Stanford Libraries},
 	author = {Hodge, Amy and Stanford Libraries},
-	year = {2015},
-
-
-}
-
-@misc{hodge_case_nodate,
+	year = {2015},	
+}@misc{hodge_case_nodate,
 	title = {Case study: {Spreadsheets}},
 	shorttitle = {Case study},
 	url = {http://library.stanford.edu/research/data-management-services/case-studies/case-study-spreadsheets},
@@ -623,12 +497,8 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	language = {en},
 	urldate = {2018-02-01},
 	journal = {Stanford Libraries},
-	author = {Hodge, Amy},
-
-
-}
-
-@misc{stanford_libraries_basic_nodate,
+	author = {Hodge, Amy},	
+}@misc{stanford_libraries_basic_nodate,
 	title = {Basic approach to metadata},
 	url = {http://library.stanford.edu/research/data-management-services/data-best-practices/creating-metadata/basic-approach-metadata},
 	abstract = {Simple ways to improve how you document your data and research outputs.},
@@ -637,9 +507,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {Stanford Libraries},
 	author = {{Stanford Libraries}},
 
-}
-
-@misc{stanford_advanced_nodate,
+}@misc{stanford_advanced_nodate,
 	title = {Advanced metadata},
 	url = {http://library.stanford.edu/research/data-management-services/data-best-practices/creating-metadata/advanced-metadata},
 	abstract = {How to approach creating more formalized metadata for your data and other research outputs.},
@@ -648,9 +516,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {Stanford Libraries},
 	author = {{Stanford}},
 
-}
-
-@misc{wallis_version_2014,
+}@misc{wallis_version_2014,
 	title = {Version control {Part} 1: {Local} repository},
 	shorttitle = {Version control {Part} 1},
 	url = {https://tomwallis.info/2014/02/05/version-control-part-1-local-repository/},
@@ -662,9 +528,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	month = feb,
 	year = {2014},
 
-}
-
-@misc{wallis_version_2014-1,
+}@misc{wallis_version_2014-1,
 	title = {Version control {Part} 2: {Remote} repository},
 	shorttitle = {Version control {Part} 2},
 	url = {https://tomwallis.info/2014/02/27/version-control-part-2-remote-repository/},
@@ -676,9 +540,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	month = feb,
 	year = {2014},
 
-}
-
-@misc{university_of_leicester_version_nodate,
+}@misc{university_of_leicester_version_nodate,
 	title = {Version control},
 	url = {https://www2.le.ac.uk/services/research-data/organise-data/version-control},
 	abstract = {Version control is the means by which different versions and drafts of a document (or file or record or dataset) are managed.},
@@ -687,9 +549,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {University of Leicester},
 	author = {{University of Leicester}},
 
-}
-
-@misc{strien_introduction_2016,
+}@misc{strien_introduction_2016,
 	title = {An {Introduction} to {Version} {Control} {Using} {GitHub} {Desktop}},
 	url = {https://programminghistorian.org/lessons/getting-started-with-github-desktop},
 	language = {en},
@@ -699,9 +559,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	month = jun,
 	year = {2016},
 
-}
-
-@article{foster_open_2017,
+}@article{foster_open_2017,
 	title = {Open {Science} {Framework} ({OSF})},
 	volume = {105},
 	issn = {1536-5050},
@@ -714,13 +572,9 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	month = apr,
 	year = {2017},
 	pmid = {null},
-	pmcid = {PMC5370619},
-
-	pages = {203--206},
-
-}
-
-@article{ziemann_gene_2016,
+	pmcid = {PMC5370619},	pages = {203--206},
+	
+}@article{ziemann_gene_2016,
 	title = {Gene name errors are widespread in the scientific literature},
 	volume = {17},
 	issn = {1474-760X},
@@ -731,13 +585,9 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {Genome Biology},
 	author = {Ziemann, Mark and Eren, Yotam and El-Osta, Assam},
 	month = aug,
-	year = {2016},
-
-	pages = {177},
-
-}
-
-@misc{simonsohn_[69]_2018,
+	year = {2016},	pages = {177},
+	
+}@misc{simonsohn_[69]_2018,
 	title = {[69] {Eight} things {I} do to make my open research more findable and understandable},
 	url = {http://datacolada.org/69},
 	abstract = {It is now common for researchers to post original materials, data, and/or code behind their published research. That’s obviously great, but open research is often difficult to find and understand. …},
@@ -748,9 +598,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	month = feb,
 	year = {2018},
 
-}
-
-@article{bahlai_data_2017-1,
+}@article{bahlai_data_2017-1,
 	title = {Data {Carpentry}: {Data} {Organization} in {Spreadsheets} {Ecology} lesson},
 	url = {http://www.datacarpentry.org/spreadsheet-ecology-lesson/},
 	urldate = {2018-02-07},
@@ -759,9 +607,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	month = apr,
 	year = {2017},
 
-}
-
-@misc{mcgrory_poster_2015,
+}@misc{mcgrory_poster_2015,
 	title = {Poster for "{Excel} {Archival} {Tool}: {Automating} the {Spreadsheet} {Conversion} {Process}"},
 	shorttitle = {Poster for "{Excel} {Archival} {Tool}},
 	url = {http://conservancy.umn.edu/handle/11299/171966},
@@ -769,12 +615,8 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	language = {en},
 	urldate = {2018-02-07},
 	author = {McGrory, John},
-	year = {2015},
-
-
-}
-
-@misc{uk_data_service_data_nodate-1,
+	year = {2015},	
+}@misc{uk_data_service_data_nodate-1,
 	title = {Data security},
 	url = {https://www.ukdataservice.ac.uk/manage-data/store/security},
 	abstract = {A data storage strategy is important because digital storage media are inherently unreliable and all file formats and physical storage media will ultimately become obsolete.},
@@ -782,21 +624,15 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	journal = {UK Data Service},
 	author = {{UK Data Service}},
 
-}
-
-@article{de_valenca_influence_2017,
+}@article{de_valenca_influence_2017,
 	title = {Influence of {Rayleigh}-{Bénard} convection on electrokinetic instability in overlimiting current conditions},
 	doi = {10.4121/uuid:b55184a0-930d-4b5c-940b-fd3038e05d83},
 	abstract = {Image data and MATLAB models belonging to the publication: Influence of Rayleigh-Bénard convection on electrokinetic instability in overlimiting current conditions, Physical Review Fluids 2, 033701 (2017)},
 	language = {en},
 	author = {De Valença, Joeri C. and Kurniawan, Aziz and Wagterveld, R. Martijn and Wood, Jeffery A. and Lammertink, Rob G. H.},
 	year = {2017},
-	note = {type: dataset},
-
-
-}
-
-@article{wilkinson_project_2017,
+	note = {type: dataset},	
+}@article{wilkinson_project_2017,
 	title = {Project {Panormos} {Archaeological} {Survey}: {Method} {Design} (survey-design)},
 	shorttitle = {Project {Panormos} {Archaeological} {Survey}},
 	url = {https://zenodo.org/record/1063932#.WoFooGfff7w},
@@ -809,9 +645,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	year = {2017},
 	note = {type: dataset},
 
-}
-
-@article{samuk_data_2018,
+}@article{samuk_data_2018,
 	title = {Data from: {Exposure} to predators does not lead to the evolution of larger brains in experimental populations of threespine stickleback},
 	doi = {10.5061/dryad.dh3h417},
 	abstract = {Natural selection is often invoked to explain differences in brain size among vertebrates. However, the particular agents of selection that shape brain size variation remain obscure. Recent studies suggest that predators may select for larger brains because increased cognitive and sensory abilities allow prey to better elude predators. Yet, there is little direct evidence that exposure to predators causes the evolution of larger brains in prey species. We experimentally tested this prediction by exposing families of 1000-2000 F2 hybrid benthic-limnetic threespine stickleback to predators under naturalistic conditions, along with matched controls. After two generations of selection, we found that fish from the predator addition treatment had significantly smaller brains (specifically smaller telencephalons and optic lobes) than fish from the control treatment. After an additional generation of selection, we reared experimental fish in a common environment and found that this difference in brain size was maintained in the offspring of fish from the predator addition treatment. Our results provide direct experimental evidence that (a) predators can indeed drive the evolution of brain size – but not in the fashion commonly expected and (b) that the tools of experimental evolution can be used to the study the evolution of the vertebrate brain.},
@@ -820,20 +654,14 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	author = {Samuk, Kieran and Xue, Jan and Rennison, Diana Jessie},
 	month = feb,
 	year = {2018},
-	note = {type: dataset},
-
-
-}
-
-@misc{broman_data_nodate,
+	note = {type: dataset},	
+}@misc{broman_data_nodate,
 	title = {data organization : organizing data in spreadsheets},
 	url = {http://kbroman.org/dataorg/},
 	urldate = {2018-02-19},
 	author = {Broman, Karl W.},
 
-}
-
-@misc{muller_cinq_2018,
+}@misc{muller_cinq_2018,
 	type = {Billet},
 	title = {Cinq ans d’usage de {Zotero}, un bilan},
 	url = {https://consciences.hypotheses.org/1184},
@@ -845,9 +673,7 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	month = mar,
 	year = {2018},
 
-}
-
-@misc{gruson-daniel_atelier_2016,
+}@misc{gruson-daniel_atelier_2016,
 	title = {Atelier \#05 : {La} biblio, c’est fantastique ! : découverte de {Zotero}},
 	shorttitle = {ateliers-open-geek},
 	url = {https://github.com/HackYourPhd/ateliers-open-geek/blob/master/Atelier_05_biblio_zotero/Atelier_05.md},
@@ -856,11 +682,8 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	author = {Gruson-Daniel, Célya},
 	month = nov,
 	year = {2016},
-	note = {original-date: 2014-10-14T11:59:40Z},
 
-}
-
-@misc{martinolli_zotlog_2016,
+}@misc{martinolli_zotlog_2016,
 	type = {Billet},
 	title = {{ZotLog} : structurer son parcours de recherche avec {Zotero}},
 	url = {https://tribuneci.wordpress.com/2016/10/11/zotlog-structurer-son-parcours-de-recherche-avec-zotero/},
@@ -869,5 +692,25 @@ The workshop works best when adapted for a particular discipline and with a maxi
 	author = {Martinolli, Pascal},
 	month = oct,
 	year = {2016},
+
+}@misc{dechamp_research_2018,
+	address = {Lillestrom},
+	title = {Research and {Innovation} in transformation: the transition to {Open} {Science}},
+	shorttitle = {Research and {Innovation} in transformation},
+	url = {https://www.slideshare.net/OpenAccessEC/research-and-innovation-in-transformation-the-transition-to-open-science},
+	urldate = {2018-03-08},
+	author = {Dechamp, Jean-François},
+	month = mar,
+	year = {2018},	
+}@misc{koulocheri_what_2017,
+	title = {What is the {Open} {Research} {Data} {Pilot}?},
+	shorttitle = {What is the {Open} {Research} {Data} {Pilot}?},
+	url = {https://www.openaire.eu/what-is-the-open-research-data-pilot},
+	language = {en-gb},
+	urldate = {2018-03-14},
+	journal = {OpenAIRE},
+	author = {Koulocheri, Eleni},
+	month = nov,
+	year = {2017},
 
 }
